--- a/index.html
+++ b/index.html
@@ -30,6 +30,27 @@
       <div class="img-placeholder">This is a placeholder for an image</div>
     </div>
   </header>
+  <div class="random-info">
+    <h3>Some random information.</h3>
+    <div class="blocks-container">
+      <div class="info-block">
+        <div class="block"></div>
+        <p class="info-block-text">this is some subtext under an illustration or image</p>
+      </div>
+      <div class="info-block">
+        <div class="block"></div>
+        <p class="info-block-text">this is some subtext under an illustration or image</p>
+      </div>
+      <div class="info-block">
+        <div class="block"></div>
+        <p class="info-block-text">this is some subtext under an illustration or image</p>
+      </div>
+      <div class="info-block">
+        <div class="block"></div>
+        <p class="info-block-text">this is some subtext under an illustration or image</p>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
