--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
     </p>
     <p class="quote-author">-Thor, God of Thunder</p>
   </div>
+  <div class="sign-up">
+    <div class="sign-up-container">
+      <p class="sign-up-msg">
+        Call to action! It's time!<br>
+        <span>Sign up for our product by clicking that button right over there!</span>
+      </p>
+      <button class="sign-up-btn">Sign up</button>
+    </div>
+  </div>
+  <footer>
+    <p class="copyright">Copyright &copy; The Odin Project 2021</p>
+  </footer>
 </body>
 
 </html>
